syntax = "proto3";

option go_package="./;hello";

package hello;

message String {
  string value = 1;
}

service HelloService {
  rpc Hello (String) returns (String);
}
// protoc --go_out=. hello.proto

//不过在protoc-gen-go内部已经集成了一个名字为 grpc 的插件，可以针对gRPC生成代码：

// protoc --go_out=plugins=grpc:. hello.proto