syntax = "proto3";

package hello;

//指定go包名
option go_package = "./;hello";

//指定Hello服务
service Hello {
  //定义SayHello方法
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

//HelloRequest请求结构体
message HelloRequest {
  string name = 1;
}

//HelloResponse响应结构体
message HelloResponse {
  string message = 1;
}